<resources>
    <string name="app_name">Popular Movies</string>

    <string name="title_place_holder">Interstellar</string>

    <string name="release_date_place_holder">October 26th, 2014</string>

    <string name="vote_average_place_holder">8.6/10</string>

    <string name="plot_synopsis_place_holder">In Earth\'s future, a global crop blight and second Dust
        Bowl are slowly rendering the planet uninhabitable. Professor Brand (Michael Caine), a
        brilliant NASA physicist, is working on plans to save mankind by transporting Earth\'s
        population to a new home via a wormhole. But first, Brand must send former NASA pilot Cooper
        (Matthew McConaughey) and a team of researchers through the wormhole and across the galaxy
        to find out which of three planets could be mankind\'s new home.</string>
    <string name="poster_content_description">This is the poster for the selected movie</string>

    <!-- Strings for the UriBuilder -->

    <string name="tmdb_base_url" translatable="false">http://api.themoviedb.org/3/discover/movie?</string>



    <!-- Strings for Miscellaneous -->
    <string name="release_date_string">Release Date</string>
    <string name="rating_string">Rating</string>


    <!-- Strings for the "Order by" preferences -->

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Movies Settings</string>

    <string name="settings_order_by_label">Order by</string>
    <string name="settings_order_by_key" translatable="false">orderBy</string>
    <string name="settings_order_by_default" translatable="false">release_date.desc</string>

    <string name="settings_order_by_most_popular_label_descending">Most Popular (Descending)</string>
    <string name="settings_order_by_most_popular_value_descending">popularity.desc</string>
    <string name="settings_order_by_most_popular_label_ascending">Most Popular (Ascending)</string>
    <string name="settings_order_by_most_popular_value_ascending">popularity.asc</string>

    <string name="settings_order_by_top_rated_label_descending">Top Rated (Descending)</string>
    <string name="settings_order_by_top_rated_value_descending">vote_average.desc</string>
    <string name="settings_order_by_top_rated_label_ascending">Top Rated (Ascending)</string>
    <string name="settings_order_by_top_rated_value_ascending">vote_average.asc</string>

    <string name="settings_order_by_newest_release_label_descending">Newest Releases</string>
    <string name="settings_order_by_newest_release_value_descending">release_date.desc</string>

    <string name="settings_order_by_upcoming_releases_label_ascending">Upcoming Releases</string>
    <string name="settings_order_by_upcoming_releases_value_ascending">release_date.asc</string>

    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_movies">No Movies Found</string>


</resources>
