<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cropToPadding="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/poster_content_description"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"
            app:layout_constraintTop_toBottomOf="@+id/movie_poster" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_place_holder"
            android:textColor="@color/colorText"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@+id/view2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"
            app:layout_constraintTop_toBottomOf="@+id/movie_title" />


        <TextView
            android:id="@+id/release_date_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/release_date_string"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/release_date"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/view3"
            app:layout_constraintRight_toLeftOf="@+id/view3"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/release_date_place_holder"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/view4"
            app:layout_constraintEnd_toStartOf="@+id/view3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/release_date_string" />


        <View
            android:id="@+id/view3"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/divider"
            app:layout_constraintBottom_toTopOf="@+id/view4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2"
            app:layout_constraintVertical_bias="1.0" />


        <TextView
            android:id="@+id/rating_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/rating_string"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/vote_average"
            app:layout_constraintLeft_toRightOf="@+id/view3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <TextView
            android:id="@+id/vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/vote_average_place_holder"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/view4"
            app:layout_constraintLeft_toRightOf="@+id/view3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rating_string" />


        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"
            app:layout_constraintBottom_toBottomOf="@+id/release_date"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="8dp" />


        <TextView
            android:id="@+id/plot_synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/plot_synopsis_place_holder"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view4" />


    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>